[package]
name = "xx"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
min-max-heap = "1.3.0"
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
socket2 = "0.5.6"
rustls = { version = "0.21.10", default-features = false, features = ["quic"] }
quinn = "0.10.2"
quinn-proto = "0.10.6"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.23", default-features = false }
rand = "0.8.5"